--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <form action="">
                     <div class="row">
                         <div class="col-md-3 mb-3 mb-md-0">
-                            <div class="stepper align-items-center align-items-md-stretch">
+                            <div class="stepper align-items-center align-items-md-stretch position-sticky top-0 bottom-0 overflow-y-auto">
                                 <div class="step active completed">Product</div>
                                 <div class="connector"></div>
                                 <div class="step">Review</div>
